--- a/public/style.css
+++ b/public/style.css
@@ -2,13 +2,56 @@ html, body {
     height: 100%;
 }
 
+body {
+    background-image: url("./film-spiral.jpeg");
+    background-size: cover;
+    background-color: aqua;
+}
+
+.btn-info {
+    margin-right: 5px;
+}
+
 .container {
     position: relative;
     /*top: 50%;*/
     /*transform: translateY(-100%);*/
     text-align: center;
+    background-color: rgba(255, 255, 255, .8);
+    min-height: 100vh;
 }
 
 .row {
     margin-bottom: 12px;
 }
+
+.tableHeading {
+    text-align: center;
+    font-style: italic;
+    margin-bottom: 0px;
+}
+
+.divider {
+    height: 2px;
+    background-color: rgba(0, 0, 0, .8);
+    margin-bottom: 10px;
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin: 40px auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/*#display-movies, .newMovieSection {*/
+    /*background-color: rgba(255, 255, 255, .8);*/
+/*}*/
