--- a/public/style.css
+++ b/public/style.css
@@ -52,6 +52,9 @@ body {
     100% { transform: rotate(360deg); }
 }
 
+.hidden{
+    display:none;
+}
 /*#display-movies, .newMovieSection {*/
     /*background-color: rgba(255, 255, 255, .8);*/
 /*}*/
